Fixed one coding style violation and applied part of patch of ticket #5892, which includes fixes to compile Haiku on clang.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@36906 a95241bf-73f2-0310-859d-f6bbb57e9c96